2012-11-21 David Williams <dwilliams@ricohsv.com>
      * db/source/PPD/Lanier/PS/Lanier-SP_8300DN_PS.ppd,
        db/source/printer/Lanier-SP_8300DN.xml,
        db/source/PPD/Lanier/PS/Lanier-SP_C830DN_PS.ppd,
        db/source/printer/Lanier-SP_C830DN.xml,
        db/source/PPD/Lanier/PS/Lanier-SP_C831DN_PS.ppd,
        db/source/printer/Lanier-SP_C831DN.xml,
        db/source/PPD/NRG/PS/NRG-SP_8300DN_PS.ppd,
        db/source/printer/NRG-SP_8300DN.xml,
        db/source/PPD/NRG/PS/NRG-SP_C830DN_PS.ppd,
        db/source/printer/NRG-SP_C830DN.xml,
        db/source/PPD/NRG/PS/NRG-SP_C831DN_PS.ppd,
        db/source/printer/NRG-SP_C831DN.xml,
        db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_8300DN_PS.ppd,
        db/source/printer/Ricoh-Aficio_SP_8300DN.xml,
        db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_C830DN_PS.ppd,
        db/source/printer/Ricoh-Aficio_SP_C830DN.xml,
        db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_C831DN_PS.ppd,
        db/source/printer/Ricoh-Aficio_SP_C831DN.xml,
        db/source/PPD/Savin/PS/Savin-SP_8300DN_PS.ppd,
        db/source/printer/Savin-SP_8300DN.xml,
        db/source/PPD/Savin/PS/Savin-SP_C830DN_PS.ppd,
        db/source/printer/Savin-SP_C830DN.xml,
        db/source/PPD/Savin/PS/Savin-SP_C831DN_PS.ppd,
        db/source/printer/Savin-SP_C831DN.xml,
        db/source/PPD/Lanier/PXL/Lanier-SG3100SNw_PXL.ppd,
        db/source/printer/Lanier-SG3100SNw.xml,
        db/source/PPD/Lanier/PXL/Lanier-SG3110SFNw_PXL.ppd,
        db/source/printer/Lanier-SG3110SFNw.xml,
        db/source/PPD/NRG/PXL/NRG-SG3100SNw_PXL.ppd,
        db/source/printer/NRG-SG3100SNw.xml,
        db/source/PPD/NRG/PXL/NRG-SG3110SFNw_PXL.ppd,
        db/source/printer/NRG-SG3110SFNw.xml,
        db/source/PPD/Ricoh/PXL/Ricoh-AficioSG3100SNw_PXL.ppd,
        db/source/printer/Ricoh-AficioSG3100SNw.xml,
        db/source/PPD/Ricoh/PXL/Ricoh-AficioSG3110SFNw_PXL.ppd,
        db/source/printer/Ricoh-AficioSG3110SFNw.xml,