@@ -115,6 +115,9 @@
       <id>printer/Epson-E-350</id>
     </printer>
     <printer>
+      <id>printer/Epson-E-360_Series</id>
+    </printer>
+    <printer>
       <id>printer/Epson-E-500</id>
     </printer>
     <printer>
@@ -140,6 +143,9 @@
     </printer>
     <printer>
       <id>printer/Epson-E-820</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-E-830_Series</id>
     </printer>
     <printer>
       <id>printer/Epson-EP-801A</id>
