@@ -1,0 +1,38 @@
+<printer id="printer/Epson-E-360_Series">
+  <make>Epson</make>
+  <model>E-360 Series</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.com/</url>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:E-360 Series;CLS:PRINTER;DES:EPSON E-360 Series</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
+      <manufacturer>EPSON</manufacturer>
+      <model>E-360 Series</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>epson-escpr</driver>
+  <drivers>
+    <driver>
+      <id>epson-escpr</id>
+    </driver>
+ </drivers>
+  <comments>
+    <en>
+      All-in-One color inkjet printer.&lt;p&gt;
+      Epson provides a free (GPL) driver for this printer.&lt;p&gt;
+
+      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
+    </en>
+  </comments>
+</printer>
