@@ -1,3 +1,9 @@
+2012-12-26  Seiko Epson Corporation <linux-printer@epson.jp>
+	* db/source/printer/Epson-E-360_Series.xml,
+	  db/source/printer/Epson-E-830_Series.xml: Added new printer.xml
+
+	* db/source/driver/epson-escpr.xml: Added the above printer.
+
 2012-11-21 David Williams <dwilliams@ricohsv.com>
       * db/source/PPD/Lanier/PS/Lanier-SP_8300DN_PS.ppd,
         db/source/printer/Lanier-SP_8300DN.xml,
